<resources>
    <string name="app_name">Spawn Daily Zombie</string>
    <string name="action_settings">Settings</string>

    <string name="bt_text_spawn_walker">Walker</string>
    <string name="bt_text_spawn_fatty">Fatty</string>
    <string name="bt_text_spawn_runner">Runner</string>

    <string name="textSettings_text">Settings</string>
    <string name="SettingTextWalker_text">Wahrscheinlichkeit Walker</string>
    <string name="SettingTextRunner_text">Wahrscheinlichkeit Runner</string>
    <string name="SettingTextFatty_text">Wahrscheinlichkeit Fatty</string>
    <string name="SettingTextoneTime_checkbox">kein wiederholtes erscheinen der Zombies, bis alle einmal da waren</string>
    <string name="SettingTextoneTime_tooltip">jeder Zombie erscheint 1x, bis alle 1x erschienen sind.</string>

    <string name="text_w_ballerina">Rigor mortis made the Ballerina lose part of her previously effortless dance moves, but she is still flexible and agile for a zombie and can jump surprisingly well. &lt;b&gt;If she actives 2 zones away from a Survivor, she jumps right at them by moving 2 zones. Likewise, she may ignore obstacles such as tanks and sandbags.&lt;/b&gt;</string>
    <string name="text_w_bride">Traditionally - and this is one traditional bride - someone needs to accompany the Bride as she makes her way down the aisle. &lt;b&gt;When spawning the Bride, spawn an additional Walker with her.&lt;/b&gt;</string>
    <string name="text_w_butler">The Butler is always ready to answer the door, only letting in those his boss would allow. &lt;b&gt;When you eliminate the Butler, you may look at the top card in the Zombie deck and decide whether to put it back on top of the deck or discard it.&lt;/b&gt;</string>
    <string name="text_w_cat_lady">The Cat Lady may not be the most fearsome of zombies, but her zombie cat companions can easily wreak some havoc around her.&lt;b&gt;Whenever she attacks, EVERY Survivor in her Zone suffers 1 Wound.&lt;/b&gt; Of course, if you\'re playing with Dogz, having the Cat Lady show up will tend to create some extra mayhem. &lt;b&gt;Any Dogz with a Line of Sight on the Cat Lady gets an extra Action for their current Activation.&lt;/b&gt;</string>
    <string name="text_w_cheerleader">Her infection may be contagious, but so is her excitement (or what\'s left of it). &lt;b&gt;All Actors (both Zombies and Survivors) in her Zone get an extra action for their current activation.&lt;/b&gt;</string>
    <string name="text_w_coffin_joe">Coffin Joe is a tough nut to crack, for a walker, what with him having the extra protection of a coffin and all. &lt;b&gt;In order to eliminate him, a Survivor must spend TWO hits with Damage 1 or more on him at the same time.&lt;/b&gt;</string>
    <string name="text_w_executive">The Executive is still bossing people around, telling them what to do and when. &lt;b&gt;When you eliminate the Executive, you may draw the top 3 cards of the Zombie deck, look at them, and put them back on top of the deck in any order you wish.&lt;/b&gt;</string>
    <string name="text_w_flight_attendant">Despite her decomposing state, the Flight Attendant keeps enforcing the Flight Rules. &lt;b&gt;Whenever she hits a Survivor, they must discard the largest item they have in hand.&lt;/b&gt; Players may freely discuss and decide which one fits the criteria, as it should have been stored in the overhead backpack compartment.</string>
    <string name="text_w_judge">Justice will prevail, regardless if the Judge is dead or alive, and in his presence everyone is deemed equal. &lt;b&gt;Ignore the targeting priority order when performing a Ranged attack in his zone, targeting whichever zombie you prefer.&lt;/b&gt;</string>
    <string name="text_w_lawnmower_man">How the Lawnmower Man manages to keep his machine running is a mystery (is someone really refilling his gas tank, what a prankster!). What we know is those blades are sharp, and they always seem to lead the way wherever he shambles. &lt;b&gt;Whenever he enters a Zone with Survivors, he instantly deals 1 Wound to them.&lt;/b&gt;</string>
    <string name="text_w_lion_dancer">The Lion Dancer is known to bring luck to those around it, and it continues to do so even in zombie form! &lt;b&gt;Any Survivor with a line of sight on the Lion Dancer gains the Lucky skill, being able to reroll attacks!&lt;/b&gt;</string>
    <string name="text_w_lunch_lady">The Lunch Lady was not very popular among humans and constantly had her food criticized and mocked. It was in death that she found the recognition that she deserves. Zombies rush to her to enjoy her delicacies. &lt;b&gt;If she is ever alone, immediately spawn one Runner in her zone.&lt;/b&gt;</string>
    <string name="text_w_magician">Making things appear out of thin air is a Magician\'s trade, even after death. &lt;b&gt;When you eliminate him you get a chance to draw something from his hat, so draw a card from the Equipment deck (hey, it may even be a zombie)!&lt;/b&gt;</string>
    <string name="text_w_nun">Once a nun, always a nun. Regardless of the Survivor\'s beliefs, it takes extra effort and will power to disassociate what she once was from the terrible creature she has become. &lt;b&gt;Whenever you eliminate the Nun, instead of gaining 1 AP, you lose 1 AP.&lt;/b&gt; But it needs to be done. We can only hope that the zombie apocalypse will someday meet its end.</string>
    <string name="text_w_one_man_band">No one knows how or why, but the One-man Band does not let go of his instruments. What we do know is that &lt;b&gt;whichever space he occupies becomes the noisiest one for &lt;i&gt;other&lt;/i&gt; Zombies. He\'ll still follow the noisiest zone on the Board, though.&lt;/b&gt; Watch out for all zombies that follow his music!</string>
    <string name="text_w_postman">We\'re all always excited to see what the Postman will bring. Hopefully it will be a gift, or the Kickstarter pledge you\'ve been waiting for\.\.\. And no matter what, the Postman will deliver, even in death. &lt;b&gt;When you spawn the Postman, draw an Equipment card and assign it to him (if it\'s an \"Aahhh!\" card, discard it and draw a new one). The Survivor who kills the Postman immediately gets the card.&lt;/b&gt;</string>
    <string name="text_w_ren_faire_man">The Ren Faire Man has always been a stickler for historical accuracy, and he would never accept being killed by any historically inaccurate weaponry. &lt;b&gt;He ignores ALL damage from attacks, unless they come from a weapon that could exist in medieval times.&lt;/b&gt; Swords and axes are fair game. Of course, feel free to make your case as to why the weapon you\'re using is technically period-appropriate.</string>
    <string name="text_w_swimmer">Slippery and encumbered by the floats, it is fairly easy to escape this Walker. &lt;b&gt;His presence doesn\'t require Survivors to spend an extra Action to leave his Zone.&lt;/b&gt;</string>
    <string name="text_w_waitress">Always perky and full of energy, the Waitress fought her entire life for good tips, and is not about to allow death to take that away from her. &lt;b&gt;When sharing a zone with a Survivor the Waitress gains an extra activation.&lt;/b&gt;</string>

    <string name="text_r_bullfighter">This zombie\'s career (and life) depended on fast reactions to evade deadly injuries, and death has not harmed his abilities one bit. &lt;b&gt;Landing a hit on him is extremely difficult, as only a die roll of 6 against him is able to score a successful hit.&lt;/b&gt;</string>
    <string name="text_r_olympic_runner">You don\'t get the gold without a strong start. &lt;b&gt;The Olympic Runner benefits from the Zombie Rush rule: it performs an Activation right after being spawned.&lt;/b&gt;</string>
    <string name="text_r_pizza_boy">Going from home to home, never really stopping\.\.\. it\'s no wonder the Pizza Delivery Boy eventually was called to deliver at a zombie party. He managed to save the pizza, but not himself. &lt;b&gt;If you eliminate him, grab a slice and gain 3 additional AP.&lt;/b&gt;  Yummy!</string>
    <string name="text_r_quarterback">This Runner will stop for nothing until he reaches its goal. &lt;b&gt;When entering a zone he immediately tackles every Survivor with such a powerful impact that it will cost them 1 additional action to get up.&lt;/b&gt; Wise players would think of shooting before that even happens, but keep this in mind: &lt;b&gt;due to the heavy protective gear it takes a 2 Damage hit to kill him (like a Fatty).&lt;/b&gt;</string>
    <string name="text_r_robber">Even as a zombie, the Robber can\'t quit his old habits of taking what doesn\'t belong to him. &lt;b&gt;For each wound the Robber deals to a Survivor, they must discard 1 of their Equipment cards.&lt;/b&gt;</string>
    <string name="text_r_skateboarder">More impressive than seeing a zombie that manages to balance itself on a skateboard is to see one excelling at it. &lt;b&gt;The Skateboarder moves 2 spaces on the first move she makes during each activation.&lt;/b&gt;</string>

    <string name="text_f_goth_chick">Dying hasn\'t dampened the Goth Chick\'s fascination with death. It just gets her going. &lt;b&gt;Whenever an Actor is killed in her Zone, she immediately gets an extra activation.&lt;/b&gt;</string>
    <string name="text_f_luchador">No matter how brave you are, it\'s probably not the best idea to face a zombie Luchador. With muscle memory from the life he used to have, the Luchador will use all the moves he has to prevent you from leaving what he perceives as a ring until the fight is over. &lt;b&gt;Leaving his zone costs Survivors an additional Action (on top of the normal ones).&lt;/b&gt;</string>
    <string name="text_f_sports_fan">As if the zombie apocalypse wasn\'t enough you still have to handle being demoralized by a big fan cheering for the zombie team. &lt;b&gt;It is so distracting that Survivors within range 0\-1 of the Sports Fan have the Accuracy level of their weapons increased by 1 (maximum of 6).&lt;/b&gt;</string>
    <string name="text_f_sumo_wrestler">As if zombies weren\'t scary enough, this one is trained in sumo wrestling and is much bigger than you. Self-preservation should keep anyone from getting close to this Fatty, and even if for a brief moment of insanity anyone tried, they would be easily pushed back. &lt;b&gt;Survivors simply cannot enter the Sumo Wrestler\'s zone.&lt;/b&gt;</string>
    <string name="text_f_unicorn_girl">Rainbows, Flowers, and Sweets\.\.\. Lovely things come to mind when you think of unicorns! Even in death, she\'s living her dream of being a unicorn. And you can live your dream too! The lesson here is: you can be whatever you want to be. &lt;b&gt;When you eliminate the Unicorn Girl, you get to choose any skill you want (and we do mean any skill) and gain it until the end of your next turn!&lt;/b&gt;</string>
    <string name="text_f_welder">A welding torch can be very useful to repair things. However, the propane tank it requires can cause explosive results. &lt;b&gt;If the Welder is killed by a roll of 6, his propane tank is hit and creates a devastating Molotov effect in its Zone. If he is killed by a lower roll, then the Survivor may take his figure and keep it. If their weapon would Break due to an All-Out roll, they may discard the Welder figure instead of the weapon card.&lt;/b&gt;</string>
</resources>